[package]
name = "sshx-core"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
prost.workspace = true
rand.workspace = true
serde.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
