[package]
name = "sshx-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-channel = "1.9.0"
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["ws"] }
base64 = "0.21.4"
bytes = { version = "1.5.0", features = ["serde"] }
ciborium = "0.2.1"
clap.workspace = true
dashmap = "5.5.3"
hmac = "0.12.1"
hyper = { version = "0.14.27", features = ["full"] }
parking_lot = "0.12.1"
rand.workspace = true
serde.workspace = true
sha2 = "0.10.7"
sshx-core = { path = "../sshx-core" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-reflection = "0.10.0"
tower = { version = "0.4.13", features = ["steer"] }
tower-http = { version = "0.4.4", features = ["fs", "redirect", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
futures-util = { version = "0.3.28", features = ["sink"] }
reqwest = "0.11.20"
sshx = { path = "../sshx" }
tokio-tungstenite = "0.20.0"
