[package]
name = "sshx"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow.workspace = true
clap.workspace = true
close_fds = "0.3.2"
encoding_rs = "0.8.31"
nix = "0.26.1"
pin-project = "1.0.10"
sshx-core = { path = "../sshx-core" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
