[package]
name = "sshx"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes = "0.8.3"
ansi_term = "0.12.1"
anyhow.workspace = true
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
clap.workspace = true
close_fds = "0.3.2"
ctr = "0.9.2"
encoding_rs = "0.8.31"
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term"] }
pin-project = "1.1.3"
sshx-core = { version = "0.2.2", path = "../sshx-core" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
